test/resources/parser/passing/ExtCall4.scala
object Call {
  Std.printString((("hm?", ("oh", "erm...", "haha")), "a", true)(0)(1)(2))
}
