test/resources/parser/failing/ExtCallError0.scala
object CallError {
  if (true) { 1 } else { 2 }()
}
